framec_tests/language_specific/typescript/v3_cli_project/positive/simple_project/mod_a.frm
@target typescript

system S1 {
    machine:
        $A {
            e() { -> $B() }
        }
        $B { e() { } }
}

