framec_tests/language_specific/typescript/v3_cli_project/negative/bad_project/mod_a.frm
@target typescript

system S1 {
    machine:
        $A {
            e() { -> $Missing() }
        }
}

